# openadapt-telemetry

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/openadapt_telemetry/: __init__.py  client.py  config.py  decorators.py  events.py  posthog.py  privacy.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_decorators.py  test_posthog.py  test_privacy.py
